@@ -25,34 +25,34 @@ test_main (void)
       mp_limb_t *p = xalloc_limbs (ecc_size_j (ecc));
       mp_limb_t *q = xalloc_limbs (ecc_size_j (ecc));
       mp_limb_t *n = xalloc_limbs (size);
-      mp_limb_t *scratch = xalloc_limbs (ecc_mul_g_itch (ecc));
+      mp_limb_t *scratch = xalloc_limbs (ecc->mul_g_itch);
 
       mpn_zero (n, size);
 
       n[0] = 1;
-      ecc_mul_g (ecc, p, n, scratch);
-      ecc_j_to_a (ecc, 0, p, p, scratch);
+      ecc->mul_g (ecc, p, n, scratch);
+      ecc->h_to_a (ecc, 0, p, p, scratch);
 
       if (mpn_cmp (p, ecc->g, 2*size != 0))
 	{
-	  fprintf (stderr, "ecc_mul_g with n = 1 failed.\n");
+	  fprintf (stderr, "ecc->mul_g with n = 1 failed.\n");
 	  abort ();
 	}
 
       for (n[0] = 2; n[0] <= 4; n[0]++)
 	{
-	  ecc_mul_g (ecc, p, n, scratch);
+	  ecc->mul_g (ecc, p, n, scratch);
 	  test_ecc_mul_h (i, n[0], p);
 	}
 
       /* (order - 1) * g = - g */
       mpn_sub_1 (n, ecc->q, size, 1);
-      ecc_mul_g (ecc, p, n, scratch);
-      ecc_j_to_a (ecc, 0, p, p, scratch);
+      ecc->mul_g (ecc, p, n, scratch);
+      ecc->h_to_a (ecc, 0, p, p, scratch);
       mpn_sub_n (p + size, ecc->p, p + size, size);
       if (mpn_cmp (p, ecc->g, 2*size) != 0)
 	{
-	  fprintf (stderr, "ecc_mul_g with n = order - 1 failed.\n");
+	  fprintf (stderr, "ecc->mul_g with n = order - 1 failed.\n");
 	  abort ();
 	}
 
